# Project-CAMILA

./: .gitattributes  .gitignore  README.md
CAMILA/: Cargo.toml  build.rs
CAMILA/example/: CAMILAlib.rs  build.rs
CAMILA/proto/: CAMILA.proto
CAMILA/src/: build.rs
CAMILA/src/lib/: CAMILAlib.rs  camila_command_service_mod.rs  camila_get_response_service_mod.rs  camila_grid.rs
GUI/: icon.svg.import  project.godot
GUI/.godot/editor/: editor_layout.cfg  filesystem_cache10  project_metadata.cfg
GUI/CAMILA-GUI/: index.html  package-lock.json  package.json
GUI/CAMILA-GUI/src/: main.ts  styles.css
GUI/CAMILA-GUI/src-tauri/: Cargo.toml  tauri.conf.json
GUI/CAMILA-GUI/src-tauri/capabilities/: default.json
GUI/CAMILA-GUI/src-tauri/src/: main.rs
