[package]
name = "CAMILA"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12.3"
tokio = {version = "1.44.1", features = ["full"]}
protoc = "2.28.0"

[build-dependencies]
tonic-build = "*"

[lib]
name = "CAMILAlib"
path = "src/lib/CAMILAlib.rs"

[[bin]]
name = "CAMILAserver"
path = "src/bin/CAMILAserver.rs"
