[package]
name = "CAMILA"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
tokio = {version = "1", features = ["full"]}

tokio-stream ="0.1"
prost = "0.12"
tonic-reflection = "0.11"
once_cell = "1.21.3"
async-stream = "*"
tonic-types = "*"


[build-dependencies]
tonic-build = "0.11"

[lib]
name = "CAMILAlib"
path = "src/lib/CAMILAlib.rs"

[[bin]]
name = "CAMILAserver"
path = "src/bin/CAMILAserver.rs"
